# devloop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
.beads/: issues.jsonl  metadata.json
.githooks/: pre-commit
.github/workflows/: ci.yml  linux-release.yml  macos-ci.yml  macos-release.yml  release-reusable.yml  release.yml  rust-ci-reusable.yml
docs/: README.md  behavior.md  configuration.md  development.md  security.md
examples/blog/: devloop.toml
examples/gcp-rust-blog-public/: devloop.toml
examples/gcp-rust-blog-public/hooks/: current-post-slug.sh  publish-current-url.sh
fixtures/ci-smoke/: devloop.toml
fixtures/ci-smoke/scripts/: read-watched.sh
scripts/: ci-smoke.sh
src/: browser_reload.rs  config.rs  core.rs  engine.rs  external_events.rs  main.rs  output.rs  processes.rs  state.rs  test_support.rs
tests/: watch_flake_smoke.rs
