[package]
name = "devloop"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
globset = "0.4.16"
notify = "8.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["io-std", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
